--- a/Properties/templates/Properties/base.html
+++ b/Properties/templates/Properties/base.html
@@ -8,8 +8,20 @@
 <body>
     <nav>NaijaHomes
 
+        {% if user.is_superuser %}
+            <a href="{% url 'admin:index' %}">Admin</a>
+        {% endif %}
+
+        {% if user.is_authenticated and user.is_agent %}
+            <a href="{% url 'agent_dashboard' %}">Agent Dashboard</a>
+        {% endif %}
+
+        {% if user.is_authenticated and user.is_customer %}
+            <a href="{% url 'customer_dashboard' %}">Customer Dashboard</a>
+        {% endif %}
+
         {% if user.is_authenticated %}
-            <a href="{% url 'logout' %}">Logout</a>
+            <a href="{% url 'logout' %}">Logout</a> 
         {% else %}
             <a href="{% url 'login' %}">Login</a>
             <a href="{% url 'signup' %}">Signup</a>
