--- a/Properties/templates/Properties/base.html
+++ b/Properties/templates/Properties/base.html
@@ -1,27 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  </head>
-  <body>
+</head>
+<body>
     <nav>
-      <a href="{% url 'property_list'%}">NaijaHomes</a>
 
-      {% if user.is_superuser %}
-      <a href="{% url 'admin:index' %}">Admin</a>
-      {% endif %} {% if user.is_authenticated and user.is_agent %}
-      <a href="{% url 'agent_dashboard' %}">Agent Dashboard</a>
-      {% endif %} {% if user.is_authenticated and user.is_customer %}
-      <a href="{% url 'customer_dashboard' %}">Customer Dashboard</a>
-      {% endif %} {% if user.is_authenticated %}
-      <a href="{% url 'logout' %}">Logout</a>
-      {% else %}
-      <a href="{% url 'login' %}">Login</a>
-      <a href="{% url 'signup' %}">Signup</a>
-      {% endif %}
+        <a href="{% url 'property_list'%}">NaijaHomes</a>
+
+        {% if user.is_superuser %}
+            <a href="{% url 'admin:index' %}">Admin</a>
+        {% endif %}
+
+        {% if user.is_authenticated and user.is_agent %}
+            <a href="{% url 'agent_dashboard' %}">Agent Dashboard</a>
+        {% endif %}
+
+        {% if user.is_authenticated and user.is_customer %}
+            <a href="{% url 'customer_dashboard' %}">Customer Dashboard</a>
+        {% endif %}
+
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}">Logout</a> 
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'signup' %}">Signup</a>
+        {% endif %}
+
     </nav>
-    {% block content %} {% endblock %}
-  </body>
+    {% block content %}
+
+    {% endblock %}
+</body>
 </html>
