added a frontpage and some template logics,add the favoriting feature to the web app, made it possible to view images

--- a/Properties/templates/Properties/properties_list.html
+++ b/Properties/templates/Properties/properties_list.html
@@ -1,4 +1,5 @@
-{% extends 'Properties/base.html' %} {% block content %}
+{% extends 'Properties/base.html' %} 
+{% block content %}
 <h1>Properties List</h1>
 <ul>
   <form method="get">
